--- a/src/app/components/sharedComponents/notifications/notifications.component.html
+++ b/src/app/components/sharedComponents/notifications/notifications.component.html
@@ -11,9 +11,9 @@
         <div class="message-center">
           <!-- Message -->
           <!--<a href="#">-->
-          <!--<div class="btn btn-danger btn-circle m-r-10"><i class="fa fa-link"></i></div>-->
+          <!--<div class="btn btn-danger btn-circle c-r-10"><i class="fa fa-link"></i></div>-->
           <!--<div class="mail-contnet">-->
-          <!--<h5>{{m.receipient}}</h5> <span class="mail-desc">{{m.messages[0].text}}</span> <span class="time">{{m.messages[0].date}}</span>-->
+          <!--<h5>{{c.receipient}}</h5> <span class="mail-desc">{{c.chats[0].text}}</span> <span class="time">{{c.chats[0].date}}</span>-->
           <!--</div>-->
           <!--</a>-->
           <!-- Message -->
