--- a/src/css/lib/dropzone/dropzone.css
+++ b/src/css/lib/dropzone/dropzone.css
@@ -1,6 +1,6 @@
 /*
  * The MIT License
- * Copyright (c) 2012 Matias Meno <m@tias.me>
+ * Copyright (c) 2012 Matias Meno <c@tias.me>
  */
 @-webkit-keyframes passing-through {
   0% {
