--- a/src/app/components/studentPages/course-detail/course-detail.component.html
+++ b/src/app/components/studentPages/course-detail/course-detail.component.html
@@ -135,33 +135,36 @@
                 </td>
                 <!-- Grade -->
                 <td>
+                  <!--<mat-form-field>-->
+                    <!--<div class="example-tel-input-container">-->
+                      <!--<input matInput type="number" class="example-tel-input-element" [(ngModel)]="newGrade.grade" size="3">-->
+                      <!--<span class="example-tel-input-spacer">/</span>-->
+                      <!--<input matInput type="number" class="example-tel-input-element" [(ngModel)]="newGrade.total" size="3">-->
+                    <!--</div>-->
+                  <!--</mat-form-field>-->
+
+
+
+                  <!-- telephone input tutorial attempt -->
                   <mat-form-field>
-                    <div class="example-tel-input-container">
-                      <input matInput type="number" class="example-tel-input-element" [(ngModel)]="newGrade.grade" size="3">
-                      <span class="example-tel-input-spacer">/</span>
-                      <input matInput type="number" class="example-tel-input-element" [(ngModel)]="newGrade.total" size="3">
-                    </div>
+                    <!--<example-tel-input placeholder="Phone number" required></example-tel-input>-->
+                    <!--<div [formGroup]="parts" class="example-tel-input-container">-->
+                      <!--<input class="example-tel-input-element" formControlName="area" size="3">-->
+                      <!--<span class="example-tel-input-spacer">&ndash;</span>-->
+                      <!--<input class="example-tel-input-element" formControlName="exchange" size="3">-->
+                      <!--<span class="example-tel-input-spacer">&ndash;</span>-->
+                      <!--<input class="example-tel-input-element" formControlName="subscriber" size="4">-->
+                    <!--</div>-->
+                    <mat-icon matSuffix>phone</mat-icon>
+                    <mat-hint>Include area code</mat-hint>
                   </mat-form-field>
+
+
+
+
+
+
                 </td>
-                  <!--<div [formGroup]="parts">-->
-                    <!--<input class="area" formControlName="area" size="3">-->
-                    <!--<span>&ndash;</span>-->
-                    <!--<input class="exchange" formControlName="exchange" size="3">-->
-                    <!--<span>&ndash;</span>-->
-                    <!--<input class="subscriber" formControlName="subscriber" size="4">-->
-                  <!--</div>-->
-
-
-                  <!--<div class="row">-->
-                    <!--&lt;!&ndash;<tbody>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<tr></tr>&ndash;&gt;-->
-                      <!--<div class="col-sm-1"><mat-form-field width="1px"><input matInput placeholder="" [(ngModel)]="newGrade.grade" width="100%"></mat-form-field></div>-->
-                      <!--<div class="col-sm-1">/</div>-->
-                      <!--<div class="col-sm-5"><mat-form-field><input matInput placeholder="" [(ngModel)]="newGrade.total"></mat-form-field></div>-->
-                    <!--&lt;!&ndash;</tr>&ndash;&gt;-->
-                    <!--&lt;!&ndash;</tbody>&ndash;&gt;-->
-                  <!--</div>-->
-
                 <!-- Add new grade button -->
                 <td>
                   <button mat-button (click)="addGrade()">Add</button>
