--- a/src/app/components/sharedComponents/messages/messages-menu.component.html
+++ b/src/app/components/sharedComponents/messages/messages-menu.component.html
@@ -16,7 +16,7 @@
               <!-- Contact user profile picture -->
               <div class="user-img"> <img src="images/users/default-profile.png" alt="user" class="img-circle">
                 <!-- If message hasn't been opened -->
-                <span *ngIf="!c.messages[c.messages.length-1].seen" class="profile-status online pull-right"></span>
+                <!--<span *ngIf="!c.messages[c.messages.length-1].seen" class="profile-status online pull-right"></span>-->
               </div>
               <!-- Message content -->
               <div class="mail-contnet">
