fixed bug on sidenav that prevented items to expand

--- a/src/app/components/sharedComponents/topnavbar/topnavbar.component.html
+++ b/src/app/components/sharedComponents/topnavbar/topnavbar.component.html
@@ -1,10 +1,12 @@
 <div class="header">
   <nav class="navbar top-navbar navbar-expand-md navbar-light justify-content-between">
     <!-- Left Aligned -->
-    <li class="nav-item"> <a class="nav-link nav-toggler hidden-md-up text-muted  " href="javascript:void(0)"><i class="mdi mdi-menu"></i></a> </li>
-    <li class="nav-item m-l-10"> <a class="nav-link sidebartoggler hidden-sm-down text-muted  " href="javascript:void(0)"><i class="ti-menu"></i></a> </li>
+    <!-- Toggle sidebar when small screen -->
+    <li class="nav-item"> <a class="nav-link nav-toggler hidden-md-up text-muted  " href='javascript:void(0);'><i class="mdi mdi-menu"></i></a> </li>
+    <!-- Toggle sidebar when full screen -->
+    <li class="nav-item m-l-10"> <a class="nav-link sidebartoggler hidden-sm-down text-muted  " href='javascript:void(0);'><i class="ti-menu"></i></a> </li>
     <!-- Logo -->
-    <div class="navbar-header">
+    <div class="navbar-header" id="top">
       <!-- fix this index -->
       <a class="navbar-brand">
         <!-- Logo text -->
