--- a/src/app/components/mains/studentmain/studentmain.component.html
+++ b/src/app/components/mains/studentmain/studentmain.component.html
@@ -4,30 +4,38 @@
   <!-- Sidebar scroll-->
   <div class="scroll-sidebar">
     <!-- Sidebar navigation-->
+
+
+    <!-- using jquery -->
+
     <nav class="sidebar-nav">
       <ul id="sidebarnav">
         <li class="nav-divider"></li>
+
         <!-- Home items -->
         <li class="nav-label">Home</li>
-        <li class="nav-item"> <a class="has-arrow  " href="javascript:void(0);" data-toggle="collapse" aria-expanded="false"><i class="fa fa-columns"></i><span class="hide-menu">Resources</span></a>
+        <!-- Collapse item -->
+        <li class="nav-item"><a class="has-arrow " href='#home' data-toggle="collapse" aria-expanded="false"><i class="fa fa-columns"></i><span class="hide-menu">Resources</span></a>
           <ul id="home" aria-expanded="false" class="collapse">
-            <li><a [routerLink]="[ '/studentmain', { outlets: { content: 'dashboard' } }]" >Dashboard</a></li>
+            <li><a [routerLink]="[ '/studentmain', { outlets: { content: 'dashboard' } }]">Dashboard</a></li>
             <li><a [routerLink]="[ '/studentmain', { outlets: { content: 'mentors' } }]">Mentoria</a></li>
             <!--<li><a [routerLink]="[ '/studentmain', { outlets: { content: 'goal-form'} }]">Goals</a></li>-->
           </ul>
         </li>
+
         <!-- Courses items -->
         <li class="nav-label">Courses</li>
-        <li class="nav-item"> <a class="has-arrow  " href="javascript:void(0);" data-toggle="collapse" aria-expanded="false"><i class="fa fa-columns"></i><span class="hide-menu">Courses</span></a>
+        <li class="nav-item"> <a class="has-arrow  " href='#courses' data-toggle="collapse" aria-expanded="false"><i class="fa fa-columns"></i><span class="hide-menu">Courses</span></a>
           <ul id="courses" aria-expanded="false" class="collapse">
             <div *ngFor="let c of courses">
               <li><a [routerLink]="[ '/studentmain', { outlets: { content: 'course' } }]" [queryParams]="{ course_id: c.course_id | json }">{{c.name}}</a></li>
             </div>
           </ul>
         </li>
+
         <!-- Schedule items -->
         <li class="nav-label">Schedule</li>
-        <li class="nav-item"> <a class="has-arrow  " href="javascript:void(0);" data-toggle="collapse" aria-expanded="false"><i class="fa fa-envelope"></i><span class="hide-menu">Schedule</span></a>
+        <li class="nav-item"> <a class="has-arrow  " href='#schedule' data-toggle="collapse" aria-expanded="false"><i class="fa fa-envelope"></i><span class="hide-menu">Schedule</span></a>
           <ul id="schedule" aria-expanded="false" class="collapse">
             <li><a [routerLink]="[ '/studentmain', { outlets: { content: 'schedule' } }]" [queryParams]="{ view: 'day' | json }">Today</a></li>
             <!--<li><a [routerLink]="[ '/studentmain', { outlets: { content: 'today' } }]">Tomorrow</a></li>-->
@@ -38,6 +46,53 @@
         </li>
       </ul>
     </nav>
+
+
+
+
+
+    <!-- using angular material accordion -->
+
+    <!--<mat-accordion class="sidebar-nav">-->
+        <!--&lt;!&ndash; Home items &ndash;&gt;-->
+        <!--<li class="nav-label">Home</li>-->
+        <!--<mat-expansion-panel style="display: unset">-->
+          <!--<mat-expansion-panel-header><mat-panel-title>Resources</mat-panel-title></mat-expansion-panel-header>-->
+          <!--<ul>-->
+            <!--<li><a [routerLink]="[ '/studentmain', { outlets: { content: 'dashboard' } }]" >Dashboard</a></li>-->
+            <!--<li><a [routerLink]="[ '/studentmain', { outlets: { content: 'mentors' } }]">Mentoria</a></li>-->
+          <!--</ul>-->
+            <!--&lt;!&ndash;<li><a [routerLink]="[ '/studentmain', { outlets: { content: 'goal-form'} }]">Goals</a></li>&ndash;&gt;-->
+        <!--</mat-expansion-panel>-->
+
+      <!--&lt;!&ndash; Courses &ndash;&gt;-->
+      <!--<li class="nav-label">Courses</li>-->
+      <!--<mat-expansion-panel style="display: unset">-->
+        <!--<mat-expansion-panel-header><mat-panel-title>Courses</mat-panel-title></mat-expansion-panel-header>-->
+          <!--<div *ngFor="let c of courses">-->
+            <!--<ul>-->
+              <!--<li><a [routerLink]="[ '/studentmain', { outlets: { content: 'course' } }]" [queryParams]="{ course_id: c.course_id | json }">{{c.name}}</a></li>-->
+            <!--</ul>-->
+          <!--</div>-->
+        <!--</mat-expansion-panel>-->
+
+      <!--&lt;!&ndash; Schedule items &ndash;&gt;-->
+      <!--<li class="nav-label">Schedule</li>-->
+      <!--<mat-expansion-panel style="display: unset">-->
+        <!--<mat-expansion-panel-header><mat-panel-title>Schedule</mat-panel-title></mat-expansion-panel-header>-->
+        <!--<ul>-->
+            <!--<li><a [routerLink]="[ '/studentmain', { outlets: { content: 'schedule' } }]" [queryParams]="{ view: 'day' | json }">Today</a></li>-->
+            <!--&lt;!&ndash;<li><a [routerLink]="[ '/studentmain', { outlets: { content: 'today' } }]">Tomorrow</a></li>&ndash;&gt;-->
+            <!--<li><a [routerLink]="[ '/studentmain', { outlets: { content: 'schedule' } }]" [queryParams]="{ view: 'week' | json }">This Week</a></li>-->
+            <!--&lt;!&ndash;<li><a [routerLink]="[ '/studentmain', { outlets: { content: 'this-week' } }]">Next Week</a></li>&ndash;&gt;-->
+            <!--<li><a [routerLink]="[ '/studentmain', { outlets: { content: 'schedule' } }]" [queryParams]="{ view: 'month' | json }">Calendar</a></li>-->
+        <!--</ul>-->
+      <!--</mat-expansion-panel>-->
+    <!--</mat-accordion>-->
+
+
+
+
     <!-- End Sidebar navigation -->
   </div>
   <!-- End Sidebar scroll-->
