send messages from student detail page

--- a/src/app/components/comment-button/msg-input.html
+++ b/src/app/components/comment-button/msg-input.html
@@ -1,4 +1,4 @@
-<h3 mat-dialog-title="">Leave a comment for </h3>
+<h3 mat-dialog-title="">Leave a comment</h3>
 
 <div class="form-group">
   <input type="textarea" class="form-control" [(ngModel)]="data.text" name="text">
