--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <router-outlet></router-outlet>
+<!--<app-adminmain></app-adminmain>-->
 <!--<app-mentormain></app-mentormain>-->
 <!--<app-chat></app-chat>-->
 <!--<app-appointment-form></app-appointment-form>-->
