--- a/src/app/components/mentorsPage/student-list/student-list.component.html
+++ b/src/app/components/mentorsPage/student-list/student-list.component.html
@@ -100,7 +100,7 @@
       <!-- Name Column -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header text-md-center=""> Name </th>
-        <td mat-cell *matCellDef="let element"> <a [routerLink]="[ '/mentormain', { outlets: { content: 'student-detail' }, student: element }]"> {{element.name}} {{element.lastname}} </a></td>
+        <td mat-cell *matCellDef="let element"> <a [routerLink]="[ '/mentormain', { outlets: { content: 'student-detail' } } ]" [queryParams]="{ student: element.user_id | json }" > {{element.name}} {{element.lastname}} </a></td>
       </ng-container>
 
       <!-- Faculty Column -->
