--- a/src/app/components/studentPages/course-detail/course-detail.component.html
+++ b/src/app/components/studentPages/course-detail/course-detail.component.html
@@ -13,7 +13,7 @@
           <div class="col-sm-4 offset-2" >
             <h5 class="center">Curent Grade</h5>
             <!-- todo: cambiar el color del avg segun el status -->
-            <h1 class="center" style="color: green;">{{course.general_average | number : '.2-2'}} </h1>
+            <h1 class="center" style="color: green;">{{course.general_average}} </h1>
             <!--<div id="gauge1" class="chart"></div>-->
           </div>
           <div class="col-sm-6">
@@ -50,7 +50,7 @@
             <tbody>
               <ng-container *ngFor="let g of course.grades">
 
-                <!-- For a grade who is being edited, input field will appear -->
+                <!-- For a grade which is being edited, input field will appear -->
                 <tr *ngIf="editable==g">
                   <!-- Name -->
                   <td scope="row">
@@ -61,10 +61,10 @@
                   <!-- Date -->
                   <td>
                     <mat-form-field>
-                      <!-- todo: check por que no coge el date (i have a feeling que es el formato) -->
-                      <input #date matInput  [matDatepicker]="picker" [value]="g.date">
+                      <!-- todo: no deja cambiar la fecha -->
+                      <input #date matInput  [matDatepicker]="picker" [value]="dateToFormControl(g.date)">
                       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                      <mat-datepicker #picker disabled="false"></mat-datepicker>
+                      <mat-datepicker #picker></mat-datepicker>
                     </mat-form-field>
                   </td>
                   <!-- Weight -->
@@ -89,12 +89,14 @@
                     <button mat-button (click)="updateGrade(g,name.value,date.value,weight.value,grade.value,total.value)">Save</button>
                   </td>
                 </tr>
+                <!-- End Edit -->
 
                 <!-- If grade is not editable, show only data -->
                 <tr *ngIf="editable!=g">
                   <!-- Name -->
                   <th scope="row">{{g.name}}</th>
                   <!-- Date -->
+                  <!-- todo: pone la fecha mal -->
                   <td>{{g.date | date}}</td>
                   <!-- Weight -->
                   <td>{{g.weight}} %</td>
@@ -109,6 +111,7 @@
                   </td>
                 </tr>
               </ng-container>
+              <!-- End showing grades -->
 
               <!-- New grade form -->
               <tr>
@@ -135,18 +138,18 @@
                 </td>
                 <!-- Grade -->
                 <td>
-                  <!--<mat-form-field>-->
-                    <!--<div class="example-tel-input-container">-->
-                      <!--<input matInput type="number" class="example-tel-input-element" [(ngModel)]="newGrade.grade" size="3">-->
-                      <!--<span class="example-tel-input-spacer">/</span>-->
-                      <!--<input matInput type="number" class="example-tel-input-element" [(ngModel)]="newGrade.total" size="3">-->
-                    <!--</div>-->
-                  <!--</mat-form-field>-->
+                  <mat-form-field>
+                    <div class="example-tel-input-container">
+                      <input matInput type="number" class="example-tel-input-element" [(ngModel)]="newGrade.grade" size="3">
+                      <span class="example-tel-input-spacer">/</span>
+                      <input matInput type="number" class="example-tel-input-element" [(ngModel)]="newGrade.total" size="3">
+                    </div>
+                  </mat-form-field>
 
 
 
                   <!-- telephone input tutorial attempt -->
-                  <mat-form-field>
+                  <!--<mat-form-field>-->
                     <!--<example-tel-input placeholder="Phone number" required></example-tel-input>-->
                     <!--<div [formGroup]="parts" class="example-tel-input-container">-->
                       <!--<input class="example-tel-input-element" formControlName="area" size="3">-->
@@ -155,9 +158,9 @@
                       <!--<span class="example-tel-input-spacer">&ndash;</span>-->
                       <!--<input class="example-tel-input-element" formControlName="subscriber" size="4">-->
                     <!--</div>-->
-                    <mat-icon matSuffix>phone</mat-icon>
-                    <mat-hint>Include area code</mat-hint>
-                  </mat-form-field>
+                    <!--<mat-icon matSuffix>phone</mat-icon>-->
+                    <!--<mat-hint>Include area code</mat-hint>-->
+                  <!--</mat-form-field>-->
 
 
 
